fix(mn): workspace title alignment

--- a/packages/anafero-gui/style.module.css
+++ b/packages/anafero-gui/style.module.css
@@ -249,6 +249,7 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
+    white-space: nowrap;
 
     .browserBarTitleLink {
       &:link, &:visited {
@@ -266,16 +267,16 @@
        * faces the main reading area. */
 
       /* TODO: This transform can maybe be simplified */
-      transform: translateX(50%) rotate(-90deg) translateY(-25%) translateX(-100%) translateX(-20px);
+      transform: translateX(50%) rotate(-90deg) translateY(-25%) translateX(-100%) translateX(-15px);
 
       color: var(--spectrum-alias-border-color);
-      font-size: 20px;
+      font-size: 18px;
       line-height: 1;
       margin: 0;
       padding: 0;
       transform-origin: top left;
 
-      width: 80vh; 
+      width: 75vh;
       height: 30px;
 
       overflow: hidden;
